--- a/karmo-master/assets/css/amadou.css
+++ b/karmo-master/assets/css/amadou.css
@@ -104,7 +104,7 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .intro {
-  background: #F45B69;
+  background: blue;
   padding: 100px 0;
 }
 
@@ -134,7 +134,7 @@ h1 {
   width: 6px;
   margin: 0 auto;
   padding-top: 50px;
-  background: #fff;
+  background: #blue;
 }
 
 .timeline ul li::after {
@@ -173,7 +173,7 @@ h1 {
 .timeline ul li:nth-child(odd) div::before {
   left: -15px;
   border-width: 8px 16px 8px 0;
-  border-color: transparent #F45B69 transparent transparent;
+  border-color: transparent red transparent transparent;
 }
 
 .timeline ul li:nth-child(even) div {
@@ -183,7 +183,7 @@ h1 {
 .timeline ul li:nth-child(even) div::before {
   right: -15px;
   border-width: 8px 0 8px 16px;
-  border-color: transparent transparent transparent #F45B69;
+  border-color: transparent transparent transparent #fff;
 }
 
 time {
@@ -202,7 +202,7 @@ time {
 }
 
 .timeline ul li.in-view::after {
-  background: #F45B69;
+  background: #fff;
 }
 
 .timeline ul li div {
