--- a/karmo-master/assets/css/style.css
+++ b/karmo-master/assets/css/style.css
@@ -917,7 +917,7 @@ ul.tags li a:hover{
     display: table;
     height: 100vh;
     width: 100%;
-    background-image: url(../img/header.jpg);
+    background-image: url(../img/7DIdV8L(1).jpg);
 		background-attachment: fixed;
     background-position: center center;
     -webkit-background-size: cover;
